# os2mo-amqp-trigger-job-function-configurator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker.env  pyproject.toml  queries.graphql  schema.graphql
.gitlab/: dependabot.yml
.reuse/: dep5
autogenerated_graphql_client/: __init__.py  async_base_client.py  base_model.py  client.py  enums.py  exceptions.py  get_engagement.py  input_types.py  my_mutation.py  scalars.py  update_extension_field.py
job_function_configurator/: config.py  depends.py  helper_functions.py  log.py  main.py  mutations_made_to_mo.py  process_events.py  queries_made_to_mo.py
job_function_configurator/autogenerated_graphql_client/: __init__.py  async_base_client.py  base_model.py  client.py  enums.py  exceptions.py  get_engagement.py  get_itsystem_uuid.py  input_types.py  scalars.py  update_extension_field.py  update_job_function.py
job_function_configurator/models/: __init__.py  get_job_functions.py
tests/: test_helpers.py  test_queries.py  test_temporary.py  test_xyz.py
