[tool.poetry]
name = "job function configurator"
version = "0.0.0"  # versioning handled by conventional commits
description = "OS2mo AMQP trigger receiver for configuring job functions, allowing to edit the visibility settings of said functions as wished"
authors = ["Magenta ApS <info@magenta.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-split = "^0.8.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
fastramqpi = "^1.4.3"
uvicorn = "^0.22.0"
pytest = "^7.4.0"
pydantic = "^1.10.11"
raclients = "^3.1.12"
gql = "^3.4.1"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
